# vscodiumbench

./: .gitignore  CHANGELOG.md  LICENSE  pyproject.toml  pytest.ini
.claude/: GUIDELINES.md  PROJECT.md  settings.json
_diagrams/: c4diagrams.md  c4diagrams.mmd.md  multidiagrams.md  multidiagrams.mmd.md
_models/: DAT-presentation.md  DAT-template.jinja.md  _example.dat.md  arc42.md
_prompts/: REGLES_PLANTUML.md  _prompt_dat0.md  _prompt_dat_json.md  _prompt_dat_mermaid.md  _prompt_dat_plantuml.md  _prompt_dat_puml.md  _prompt_reponses.md  _prompt_specs.md
docs/: consignes.md  initialisation.md
scripts/: install_prince.bat  install_vscode_config.py  settings.json  settings.json.template  statusline.py
scripts/vscode_extensions/: install_vscode_extensions.py  uninstall_vscode_extensions.py
src/app/: cli.py
src/app/conversion/commands/: md2mmd.py
tests/unit/conversion/commands/: test_md2mmd.py
tools/claude-code/: statusline.py
tools/environment/: check-environment.py
tools/install/: prince.py
tools/vscode/extensions/: install_vscode_extensions.py
